# Mini-Research-Agent

aegis/: test_file.py  vulnerable.py
backend/: .env.txt  .gitignore  README.md  pyproject.toml
backend/aegis/: __init__.py
backend/aegis/api/: main.py  router.py
backend/aegis/cli/: formatter.py  main.py
backend/aegis/core/analysis/: deduplication.py  policy.py  rules.py  stages.py
backend/aegis/core/domain/: models.py
backend/aegis/core/infrastructure/: cache.py
backend/aegis/core/pipeline/: base.py
backend/aegis/core/prompts/: registry.py
backend/aegis/core/providers/: groq.py
backend/aegis/prompts/review/: v1.yaml
backend/app/: main.py
backend/app/agents/: graph.py  nodes.py  state.py
backend/app/api/: routes.py
backend/app/config/: settings.py
backend/app/memory/: mem0_client.py
backend/app/rag/: retriever.py  store.py
backend/app/tools/: web_search.py
backend/evals/: dataset.json  runner.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/common/: ErrorBoundary.tsx  PerformanceMonitor.tsx
frontend/src/components/layout/: Shell.tsx
frontend/src/features/diff-viewer/components/: CodeDiff.tsx
frontend/src/features/findings/components/: FindingsTable.test.tsx  FindingsTable.tsx
frontend/src/pages/: Evaluations.tsx  Overview.tsx  ResearchPage.tsx  SessionDetail.tsx  Sessions.tsx  Telemetry.tsx
frontend/src/schemas/: domain.ts
frontend/src/services/: api-client.ts  api.ts  review.service.ts
frontend/src/store/: useAppStore.ts
frontend/src/test/: setup.ts
(+1 files in other folders)
