[project]
name = "aegis"
version = "0.1.0"
description = "Production-grade AI-powered Code Review and Analysis Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "litellm>=1.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
aegis = "aegis.cli.main:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
